--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -24,7 +24,7 @@
 .navbar-links .link-container {
 	display: flex;
 	flex-direction: row;
-	margin-right: 237px;
+	margin-right: 25rem;
 }
 
 .navbar-links .link-container p,
